--- a/diafitass.html
+++ b/diafitass.html
@@ -100,17 +100,8 @@
     </style>
   </head>
   <body>
-    <!-- Language Switcher -->
     <div class="bg-green-800 text-white py-2">
       <div class="container mx-auto px-6 flex justify-center items-center">
-        <!-- <a href="#" aria-label="Diafit ass">
-          <img
-            src="assets/DiafitAss.png"
-            alt="diafit ass"
-            width="80"
-            height="30"
-          />
-        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
@@ -136,7 +127,6 @@
 
     <header class="hero-gradient text-white py-12 sm:py-20">
       <div class="container mx-auto px-6 text-center lg:hidden">
-        <!-- Логотип - первый элемент на мобилке -->
         <div class="mb-6">
           <img
             src="assets/DiafitAss.png"
@@ -161,7 +151,6 @@
           >
         </p>
 
-        <!-- Изображение продукта -->
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
@@ -175,7 +164,6 @@
           </div>
         </div>
 
-        <!-- Кнопка заказа -->
         <div>
           <a
             href="#order-form"
@@ -195,12 +183,10 @@
           </p>
         </div>
       </div>
-      <!-- Десктопная версия -->
       <div
         class="container mx-auto px-6 hidden lg:flex lg:flex-row items-center gap-8"
       >
         <div class="lg:w-1/2 text-left">
-          <!-- Логотип -->
           <div class="mb-6">
             <img
               src="assets/DiafitAss.png"
@@ -227,7 +213,6 @@
               Balance.</span
             >
           </p>
-          <!-- Кнопка заказа -->
           <div>
             <a
               href="#order-form"
@@ -247,7 +232,6 @@
           </div>
         </div>
 
-        <!-- Изображение продукта справа на десктопе -->
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img
@@ -263,68 +247,7 @@
       </div>
     </header>
 
-    <!-- 1. Hero Section -->
-    <!-- <header class="hero-gradient text-white py-12 sm:py-20">
-      <div
-        class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
-      >
-        <div class="lg:w-1/2 text-center lg:text-left order-2 lg:order-1">
-          <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">
-            <span class="lang-ru">ДИАФИТ AСС</span>
-            <span class="lang-uz">DIAFIT ASS</span>
-            <span class="lang-en">DIAFIT ASS</span>
-          </h1>
-          <p
-            class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0"
-          >
-            <span class="lang-ru"
-              >Натуральная поддержка при диабете и для контроля уровня сахара в
-              крови.</span
-            >
-            <span class="lang-uz"
-              >Qandli diabet, glyukoza va metabolizmni nazorat qilish uchun
-              kapsula.</span
-            >
-            <span class="lang-en"
-              >Natural Blood Sugar Support for Diabetes and Metabolic
-              Balance.</span
-            >
-          </p>
-          <a
-            href="#order-form"
-            class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
-          >
-            <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
-            <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
-            <span class="lang-en">ORDER NOW →</span>
-          </a>
-          <p class="text-xs mt-4 opacity-80">
-            <span class="lang-ru">*Гарантируем анонимную доставку.</span>
-            <span class="lang-uz"
-              >*Anonim yetkazib berishni kafolatlaymiz.</span
-            >
-            <span class="lang-en">*Anonymous delivery guaranteed.</span>
-          </p>
-        </div>
-        <div
-          class="lg:w-1/2 mt-8 lg:mt-0 flex justify-center order-1 lg:order-2"
-        >
-          <div class="relative w-max">
-            <img
-              src="assets/Diafit Ass (3).png"
-              alt="Изображение продукта Диафит АСС"
-              class="rounded-lg shadow-2xl max-w-xs md:max-w-sm"
-              width="150"
-              height="150"
-            />
-            <div class="discount-bubble">-50%</div>
-          </div>
-        </div>
-      </div>
-    </header>  -->
-
     <main>
-      <!-- 2. Why This Matters (Symptoms Section) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -414,7 +337,6 @@
         </div>
       </section>
 
-      <!-- 3. Why This Product (USPs) -->
       <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <h2
@@ -527,7 +449,6 @@
         </div>
       </section>
 
-      <!-- 5. Detailed Product Advantages (How it Works) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -660,7 +581,6 @@
         </div>
       </section>
 
-      <!-- Video Explanation Section -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -697,69 +617,6 @@
         </div>
       </section>
 
-      <!-- 6. Expert Opinion -->
-      <!-- <section class="section-gradient py-16">
-        <div class="container mx-auto px-6">
-          <div
-            class="bg-white rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
-          >
-            <div class="md:w-1/3 text-center mb-6 md:mb-0">
-              <img
-                src="https://placehold.co/300x300/16a34a/ffffff?text=Врач"
-                alt="Фото врача-эндокринолога"
-                class="rounded-full mx-auto w-48 h-48 object-cover shadow-lg border-4 border-white"
-              />
-            </div>
-            <div class="md:w-2/3">
-              <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">
-                <span class="lang-ru">Мнение эксперта</span>
-                <span class="lang-uz">Mutaxassis fikri</span>
-                <span class="lang-en">Expert Opinion</span>
-              </h2>
-              <p class="text-gray-600 mb-4">
-                <span class="lang-ru"
-                  >«Диафит АСС — это не просто средство для снижения сахара. Это
-                  комплексный препарат, который помогает организму бороться с
-                  диабетом на нескольких уровнях. Он восстанавливает метаболизм,
-                  защищает органы-мишени и улучшает общее самочувствие. Я
-                  рекомендую его как безопасную и эффективную натуральную
-                  альтернативу для поддержки пациентов с диабетом 2 типа и
-                  метаболическим синдромом.»</span
-                >
-                <span class="lang-uz"
-                  >"Diafit ASS shunchaki qandni pasaytiruvchi vosita emas. Bu
-                  organizmga bir necha darajada qandli diabet bilan kurashishga
-                  yordam beradigan kompleks preparat. U metabolizmni tiklaydi,
-                  nishon organlarni himoya qiladi va umumiy ahvolni yaxshilaydi.
-                  Men uni 2-toifa diabet va metabolik sindromli bemorlarni
-                  qo'llab-quvvatlash uchun xavfsiz va samarali tabiiy
-                  alternativa sifatida tavsiya qilaman."</span
-                >
-                <span class="lang-en"
-                  >"Diafit ASS is not just a sugar-lowering agent. It is a
-                  comprehensive supplement that helps the body fight diabetes on
-                  multiple levels. It restores metabolism, protects target
-                  organs, and improves overall well-being. I recommend it as a
-                  safe and effective natural alternative to support patients
-                  with type 2 diabetes and metabolic syndrome."</span
-                >
-              </p>
-              <p class="font-bold text-green-800">Саидова Нигора</p>
-              <p class="text-sm text-gray-500">
-                <span class="lang-ru">Врач-эндокринолог, стаж 22 года</span>
-                <span class="lang-uz"
-                  >Endokrinolog shifokor, 22 yillik tajriba</span
-                >
-                <span class="lang-en"
-                  >Endocrinologist, 22 years of experience</span
-                >
-              </p>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
-      <!-- 7. Secondary Call to Action -->
       <section class="bg-green-700 text-white py-12">
         <div class="container mx-auto px-6 text-center">
           <h2 class="text-2xl md:text-3xl font-bold mb-6">
@@ -784,7 +641,6 @@
         </div>
       </section>
 
-      <!-- 8. What It Does (Key Benefits Recap) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -897,7 +753,6 @@
         </div>
       </section>
 
-      <!-- 9. Testimonials -->
       <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <h2
@@ -992,7 +847,6 @@
         </div>
       </section>
 
-      <!-- 10. ORDER SECTION -->
       <section id="order-form" class="hero-gradient text-white py-16 sm:py-20">
         <div class="container mx-auto px-6 text-center">
           <h2 class="text-3xl md:text-5xl font-black mb-2">
@@ -1062,22 +916,25 @@
               >
             </div>
 
-            <form class="orderForm">
+            <form class="orderForm" novalidate>
               <div class="mb-4">
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-ru"
                   placeholder="Ваше имя"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-uz"
                   placeholder="Ismingiz"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-en"
                   placeholder="Your Name"
                   required
@@ -1086,18 +943,21 @@
               <div class="mb-6">
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-ru"
                   placeholder="Ваш номер телефона"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-uz"
                   placeholder="Telefon raqamingiz"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-en"
                   placeholder="Your Phone Number"
                   required
@@ -1195,7 +1055,7 @@
         startCountdown();
 
         // Form Submission Handler
-        function handleFormSubmit(event) {
+        async function handleFormSubmit(event) {
           event.preventDefault();
           const form = event.target;
           const button = form.querySelector('button[type="submit"]');
@@ -1218,26 +1078,71 @@
 
           const currentLang = html.lang;
 
+          // Получаем данные из видимых полей
+          const name = form.querySelector('input[name="name"]:not([style*="display: none"])').value;
+          const phone = form.querySelector('input[name="phone"]:not([style*="display: none"])').value;
+          const productName = "Diafit ASS"; // Название продукта
+
+          if (!name || !phone) {
+              alert('Пожалуйста, заполните все поля.');
+              return;
+          }
+
           button.disabled = true;
-          button.querySelector(`.lang-${currentLang}`).textContent =
-            sendingText[currentLang];
+          button.querySelector(`.lang-${currentLang}`).textContent = sendingText[currentLang];
 
-          setTimeout(() => {
-            form.reset();
-            button.classList.add('bg-green-500');
-            button.classList.remove('bg-yellow-400');
-            button.querySelector(`.lang-${currentLang}`).textContent =
-              successText[currentLang];
+          const TOKEN = "8056747255:AAE5fdcR91H7f_t-B9ixJVyQRgvvTCjjbw0"; 
+          const CHAT_ID = "-1003036132580,";   
 
-            setTimeout(() => {
-              button.querySelector(`.lang-${currentLang}`).textContent =
-                originalButtonText[currentLang];
-              button.disabled = false;
-              button.classList.remove('bg-green-500');
-              button.classList.add('bg-yellow-400');
+          let message = `<b>🔔 Новая заявка!</b>\n\n`;
+          message += `<b>Продукт:</b> ${productName}\n`;
+          message += `<b>Имя клиента:</b> ${name}\n`;
+          message += `<b>Телефон:</b> ${phone}`;
+          
+          const url = `https://api.telegram.org/bot${TOKEN}/sendMessage`;
+          
+          try {
+            const response = await fetch(url, {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({
+                chat_id: CHAT_ID,
+                text: message,
+                parse_mode: 'html',
+              }),
+            });
+
+            const data = await response.json();
+
+            if (data.ok) {
+              // Если успешно отправлено в Telegram
+              form.reset();
+              button.classList.add('bg-green-500');
+              button.classList.remove('bg-yellow-400');
+              button.querySelector(`.lang-${currentLang}`).textContent = successText[currentLang];
+            } else {
+              // Если Telegram вернул ошибку
+              throw new Error(data.description);
+            }
+          } catch (error) {
+            console.error('Ошибка отправки в Telegram:', error);
+            alert('Произошла ошибка при отправке заявки. Пожалуйста, попробуйте еще раз.');
+            // Возвращаем кнопку в исходное состояние при ошибке
+             button.querySelector(`.lang-${currentLang}`).textContent = originalButtonText[currentLang];
+             button.disabled = false;
+          } finally {
+            // Возвращаем кнопку в исходное состояние через 3 секунды
+             setTimeout(() => {
+                button.querySelector(`.lang-${currentLang}`).textContent = originalButtonText[currentLang];
+                button.disabled = false;
+                button.classList.remove('bg-green-500');
+                button.classList.add('bg-yellow-400');
             }, 3000);
-          }, 1500);
+          }
         }
+
 
         document.querySelectorAll('.orderForm').forEach((form) => {
           form.addEventListener('submit', handleFormSubmit);
