--- a/diafitass.html
+++ b/diafitass.html
@@ -250,13 +250,8 @@
         <!-- Изображение продукта справа на десктопе -->
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
-            <img
-              src="assets/diafit_pill.png""
-              alt="Изображение продукта Diafit Ass"
-              class="rounded-lg max-w-lg"
-              width="950"
-              height="950"
-            />
+            <img src="assets/diafit_pill.png"" alt="Изображение продукта Diafit
+            Ass" class="rounded-lg max-w-lg" width="950" height="950" />
             <div class="discount-bubble">-50%</div>
           </div>
         </div>
@@ -1066,18 +1061,21 @@
               <div class="mb-4">
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-ru"
                   placeholder="Ваше имя"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-uz"
                   placeholder="Ismingiz"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-en"
                   placeholder="Your Name"
                   required
@@ -1086,18 +1084,21 @@
               <div class="mb-6">
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-ru"
                   placeholder="Ваш номер телефона"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-uz"
                   placeholder="Telefon raqamingiz"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-yellow-400 lang-en"
                   placeholder="Your Phone Number"
                   required
@@ -1195,10 +1196,11 @@
         startCountdown();
 
         // Form Submission Handler
-        function handleFormSubmit(event) {
+        async function handleFormSubmit(event) {
           event.preventDefault();
           const form = event.target;
           const button = form.querySelector('button[type="submit"]');
+          const currentLang = document.documentElement.lang;
 
           const originalButtonText = {
             ru: 'Заказать со скидкой',
@@ -1215,28 +1217,59 @@
             uz: 'Buyurtma qabul qilindi!',
             en: 'Order accepted!',
           };
-
-          const currentLang = html.lang;
+          const errorText = {
+            ru: 'Ошибка! Попробуйте еще раз.',
+            uz: "Xatolik! Qayta urinib ko'ring.",
+            en: 'Error! Please try again.',
+          };
 
           button.disabled = true;
           button.querySelector(`.lang-${currentLang}`).textContent =
             sendingText[currentLang];
 
-          setTimeout(() => {
-            form.reset();
-            button.classList.add('bg-green-500');
+          // Собираем данные формы
+          const formData = new FormData(form);
+          const data = {
+            name: formData.get('name'),
+            phone: formData.get('phone'),
+            productName: 'Диафит АСС',
+          };
+
+          try {
+            // Отправляем данные на сервер
+            const response = await fetch('/api/send-message', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify(data),
+            });
+
+            if (response.ok) {
+              // Успешная отправка
+              form.reset();
+              button.classList.add('bg-green-500');
+              button.classList.remove('bg-yellow-400');
+              button.querySelector(`.lang-${currentLang}`).textContent =
+                successText[currentLang];
+            } else {
+              throw new Error('Ошибка сервера');
+            }
+          } catch (error) {
+            console.error('Error:', error);
+            button.classList.add('bg-red-500');
             button.classList.remove('bg-yellow-400');
             button.querySelector(`.lang-${currentLang}`).textContent =
-              successText[currentLang];
+              errorText[currentLang];
+          }
 
-            setTimeout(() => {
-              button.querySelector(`.lang-${currentLang}`).textContent =
-                originalButtonText[currentLang];
-              button.disabled = false;
-              button.classList.remove('bg-green-500');
-              button.classList.add('bg-yellow-400');
-            }, 3000);
-          }, 1500);
+          setTimeout(() => {
+            button.querySelector(`.lang-${currentLang}`).textContent =
+              originalButtonText[currentLang];
+            button.disabled = false;
+            button.classList.remove('bg-green-500', 'bg-red-500');
+            button.classList.add('bg-yellow-400');
+          }, 3000);
         }
 
         document.querySelectorAll('.orderForm').forEach((form) => {
