--- a/diafitass.html
+++ b/diafitass.html
@@ -100,8 +100,17 @@
     </style>
   </head>
   <body>
+    <!-- Language Switcher -->
     <div class="bg-green-800 text-white py-2">
       <div class="container mx-auto px-6 flex justify-center items-center">
+        <!-- <a href="#" aria-label="Diafit ass">
+          <img
+            src="assets/DiafitAss.png"
+            alt="diafit ass"
+            width="80"
+            height="30"
+          />
+        </a> -->
         <div class="flex border border-gray-400 rounded-full">
           <button
             id="lang-ru-btn"
@@ -127,6 +136,7 @@
 
     <header class="hero-gradient text-white py-12 sm:py-20">
       <div class="container mx-auto px-6 text-center lg:hidden">
+        <!-- Логотип - первый элемент на мобилке -->
         <div class="mb-6">
           <img
             src="assets/DiafitAss.png"
@@ -151,6 +161,7 @@
           >
         </p>
 
+        <!-- Изображение продукта -->
         <div class="mb-8 flex justify-center">
           <div class="relative w-max">
             <img
@@ -164,6 +175,7 @@
           </div>
         </div>
 
+        <!-- Кнопка заказа -->
         <div>
           <a
             href="#order-form"
@@ -183,10 +195,12 @@
           </p>
         </div>
       </div>
+      <!-- Десктопная версия -->
       <div
         class="container mx-auto px-6 hidden lg:flex lg:flex-row items-center gap-8"
       >
         <div class="lg:w-1/2 text-left">
+          <!-- Логотип -->
           <div class="mb-6">
             <img
               src="assets/DiafitAss.png"
@@ -213,6 +227,7 @@
               Balance.</span
             >
           </p>
+          <!-- Кнопка заказа -->
           <div>
             <a
               href="#order-form"
@@ -232,6 +247,7 @@
           </div>
         </div>
 
+        <!-- Изображение продукта справа на десктопе -->
         <div class="lg:w-1/2 flex justify-center">
           <div class="relative w-max">
             <img src="assets/diafit_pill.png"" alt="Изображение продукта Diafit
@@ -242,7 +258,68 @@
       </div>
     </header>
 
+    <!-- 1. Hero Section -->
+    <!-- <header class="hero-gradient text-white py-12 sm:py-20">
+      <div
+        class="container mx-auto px-6 flex flex-col lg:flex-row items-center gap-8"
+      >
+        <div class="lg:w-1/2 text-center lg:text-left order-2 lg:order-1">
+          <h1 class="text-4xl md:text-6xl font-black mb-4 leading-tight">
+            <span class="lang-ru">ДИАФИТ AСС</span>
+            <span class="lang-uz">DIAFIT ASS</span>
+            <span class="lang-en">DIAFIT ASS</span>
+          </h1>
+          <p
+            class="text-lg md:text-2xl font-light mb-8 max-w-xl mx-auto lg:mx-0"
+          >
+            <span class="lang-ru"
+              >Натуральная поддержка при диабете и для контроля уровня сахара в
+              крови.</span
+            >
+            <span class="lang-uz"
+              >Qandli diabet, glyukoza va metabolizmni nazorat qilish uchun
+              kapsula.</span
+            >
+            <span class="lang-en"
+              >Natural Blood Sugar Support for Diabetes and Metabolic
+              Balance.</span
+            >
+          </p>
+          <a
+            href="#order-form"
+            class="cta-button inline-block bg-yellow-400 text-green-900 font-bold py-4 px-8 rounded-lg text-xl"
+          >
+            <span class="lang-ru">ЗАКАЗАТЬ СЕЙЧАС →</span>
+            <span class="lang-uz">HOZIROQ BUYURTMA BERING →</span>
+            <span class="lang-en">ORDER NOW →</span>
+          </a>
+          <p class="text-xs mt-4 opacity-80">
+            <span class="lang-ru">*Гарантируем анонимную доставку.</span>
+            <span class="lang-uz"
+              >*Anonim yetkazib berishni kafolatlaymiz.</span
+            >
+            <span class="lang-en">*Anonymous delivery guaranteed.</span>
+          </p>
+        </div>
+        <div
+          class="lg:w-1/2 mt-8 lg:mt-0 flex justify-center order-1 lg:order-2"
+        >
+          <div class="relative w-max">
+            <img
+              src="assets/Diafit Ass (3).png"
+              alt="Изображение продукта Диафит АСС"
+              class="rounded-lg shadow-2xl max-w-xs md:max-w-sm"
+              width="150"
+              height="150"
+            />
+            <div class="discount-bubble">-50%</div>
+          </div>
+        </div>
+      </div>
+    </header>  -->
+
     <main>
+      <!-- 2. Why This Matters (Symptoms Section) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -332,6 +409,7 @@
         </div>
       </section>
 
+      <!-- 3. Why This Product (USPs) -->
       <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <h2
@@ -444,6 +522,7 @@
         </div>
       </section>
 
+      <!-- 5. Detailed Product Advantages (How it Works) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -576,6 +655,7 @@
         </div>
       </section>
 
+      <!-- Video Explanation Section -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -612,6 +692,69 @@
         </div>
       </section>
 
+      <!-- 6. Expert Opinion -->
+      <!-- <section class="section-gradient py-16">
+        <div class="container mx-auto px-6">
+          <div
+            class="bg-white rounded-lg shadow-xl p-8 md:p-12 md:flex items-center gap-12"
+          >
+            <div class="md:w-1/3 text-center mb-6 md:mb-0">
+              <img
+                src="https://placehold.co/300x300/16a34a/ffffff?text=Врач"
+                alt="Фото врача-эндокринолога"
+                class="rounded-full mx-auto w-48 h-48 object-cover shadow-lg border-4 border-white"
+              />
+            </div>
+            <div class="md:w-2/3">
+              <h2 class="text-2xl md:text-3xl font-bold text-gray-800 mb-4">
+                <span class="lang-ru">Мнение эксперта</span>
+                <span class="lang-uz">Mutaxassis fikri</span>
+                <span class="lang-en">Expert Opinion</span>
+              </h2>
+              <p class="text-gray-600 mb-4">
+                <span class="lang-ru"
+                  >«Диафит АСС — это не просто средство для снижения сахара. Это
+                  комплексный препарат, который помогает организму бороться с
+                  диабетом на нескольких уровнях. Он восстанавливает метаболизм,
+                  защищает органы-мишени и улучшает общее самочувствие. Я
+                  рекомендую его как безопасную и эффективную натуральную
+                  альтернативу для поддержки пациентов с диабетом 2 типа и
+                  метаболическим синдромом.»</span
+                >
+                <span class="lang-uz"
+                  >"Diafit ASS shunchaki qandni pasaytiruvchi vosita emas. Bu
+                  organizmga bir necha darajada qandli diabet bilan kurashishga
+                  yordam beradigan kompleks preparat. U metabolizmni tiklaydi,
+                  nishon organlarni himoya qiladi va umumiy ahvolni yaxshilaydi.
+                  Men uni 2-toifa diabet va metabolik sindromli bemorlarni
+                  qo'llab-quvvatlash uchun xavfsiz va samarali tabiiy
+                  alternativa sifatida tavsiya qilaman."</span
+                >
+                <span class="lang-en"
+                  >"Diafit ASS is not just a sugar-lowering agent. It is a
+                  comprehensive supplement that helps the body fight diabetes on
+                  multiple levels. It restores metabolism, protects target
+                  organs, and improves overall well-being. I recommend it as a
+                  safe and effective natural alternative to support patients
+                  with type 2 diabetes and metabolic syndrome."</span
+                >
+              </p>
+              <p class="font-bold text-green-800">Саидова Нигора</p>
+              <p class="text-sm text-gray-500">
+                <span class="lang-ru">Врач-эндокринолог, стаж 22 года</span>
+                <span class="lang-uz"
+                  >Endokrinolog shifokor, 22 yillik tajriba</span
+                >
+                <span class="lang-en"
+                  >Endocrinologist, 22 years of experience</span
+                >
+              </p>
+            </div>
+          </div>
+        </div>
+      </section> -->
+
+      <!-- 7. Secondary Call to Action -->
       <section class="bg-green-700 text-white py-12">
         <div class="container mx-auto px-6 text-center">
           <h2 class="text-2xl md:text-3xl font-bold mb-6">
@@ -636,6 +779,7 @@
         </div>
       </section>
 
+      <!-- 8. What It Does (Key Benefits Recap) -->
       <section class="py-16 bg-white">
         <div class="container mx-auto px-6">
           <h2
@@ -748,6 +892,7 @@
         </div>
       </section>
 
+      <!-- 9. Testimonials -->
       <section class="section-gradient py-16">
         <div class="container mx-auto px-6">
           <h2
@@ -842,6 +987,7 @@
         </div>
       </section>
 
+      <!-- 10. ORDER SECTION -->
       <section id="order-form" class="hero-gradient text-white py-16 sm:py-20">
         <div class="container mx-auto px-6 text-center">
           <h2 class="text-3xl md:text-5xl font-black mb-2">
@@ -905,9 +1051,9 @@
             </div>
 
             <div class="my-4">
-              <span class="text-xl line-through opacity-70">780.000 СУМ</span>
+              <span class="text-xl line-through opacity-70">779.000 СУМ</span>
               <span class="text-4xl font-extrabold block text-yellow-300"
-                >390.000 СУМ</span
+                >659.000 СУМ</span
               >
             </div>
 
@@ -974,7 +1120,11 @@
 
     <footer class="bg-gray-800 text-white py-6">
       <div class="container mx-auto px-6 text-center text-sm">
-        <p class="mb-2">OOO "SHIFO NUR" | Производитель</p>
+        <p class="mb-2">
+          <span class="lang-ru">OOO "Delta Online" | Розничный торговец</span>
+          <span class="lang-uz">Delta Online MChJ | Chakana sotuvchi</span>
+          <span class="lang-en">Delta Online LLC | Reseller</span>
+        </p>
         <p class="text-xs text-gray-400">
           <span class="lang-ru"
             >Биологически активная добавка. Не является лекарственным
@@ -1076,9 +1226,10 @@
             uz: "Xatolik! Qayta urinib ko'ring.",
             en: 'Error! Please try again.',
           };
-          
+
           button.disabled = true;
-          button.querySelector(`.lang-${currentLang}`).textContent = sendingText[currentLang];
+          button.querySelector(`.lang-${currentLang}`).textContent =
+            sendingText[currentLang];
 
           // Собираем данные формы
           const formData = new FormData(form);
@@ -1090,13 +1241,16 @@
 
           try {
             // Отправляем данные на сервер
-            const response = await fetch('/api/send-message', {
-              method: 'POST',
-              headers: {
-                'Content-Type': 'application/json',
-              },
-              body: JSON.stringify(data),
-            });
+            const response = await fetch(
+              'https://supermemory-theta.vercel.app/api/send-message',
+              {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+              }
+            );
 
             if (response.ok) {
               // Успешная отправка
@@ -1124,7 +1278,6 @@
             button.classList.add('bg-yellow-400');
           }, 3000);
         }
-
 
         document.querySelectorAll('.orderForm').forEach((form) => {
           form.addEventListener('submit', handleFormSubmit);
