--- a/silamax.html
+++ b/silamax.html
@@ -38,13 +38,13 @@
         background-position: center;
       }
       @media (min-width: 1024px) {
-  .hero-gradient {
-    /* Для десктопов */
-    background: url('assets/silamsxdesk.jpg');
-    
-    background-size: cover;
-    background-position: center;
-  }
+        .hero-gradient {
+          /* Для десктопов */
+          background: url('assets/silamsxdesk.jpg');
+
+          background-size: cover;
+          background-position: center;
+        }
       }
       .section-gradient {
         background: linear-gradient(
@@ -129,15 +129,15 @@
         height: 100%;
       }
       .product-image-container {
-  position: relative;
-  z-index: 10; /* Ensures it stays above other elements */
-  transform-origin: center; /* Scales from center */
-}
+        position: relative;
+        z-index: 10; /* Ensures it stays above other elements */
+        transform-origin: center; /* Scales from center */
+      }
 
-.product-image {
-  transform: scale(1.2); /* Adjust this value to make bigger/smaller */
-  transition: transform 0.3s ease; /* Optional smooth scaling */
-}
+      .product-image {
+        transform: scale(1.2); /* Adjust this value to make bigger/smaller */
+        transition: transform 0.3s ease; /* Optional smooth scaling */
+      }
     </style>
   </head>
   <body>
@@ -1044,22 +1044,25 @@
               >
             </div>
 
-            <form class="orderForm">
+            <form class="orderForm" novalidate>
               <div class="mb-4">
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-ru"
                   placeholder="Ваше имя"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-uz"
                   placeholder="Ismingiz"
                   required
                 />
                 <input
                   type="text"
+                  name="name"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-en"
                   placeholder="Your Name"
                   required
@@ -1068,18 +1071,21 @@
               <div class="mb-6">
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-ru"
                   placeholder="Ваш номер телефона"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-uz"
                   placeholder="Telefon raqamingiz"
                   required
                 />
                 <input
                   type="tel"
+                  name="phone"
                   class="w-full px-4 py-3 rounded-lg bg-gray-200 text-gray-900 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-secondary-color lang-en"
                   placeholder="Your Phone Number"
                   required
@@ -1177,10 +1183,11 @@
         startCountdown();
 
         // Form Submission Handler
-        function handleFormSubmit(event) {
+        async function handleFormSubmit(event) {
           event.preventDefault();
           const form = event.target;
           const button = form.querySelector('button[type="submit"]');
+          const currentLang = document.documentElement.lang;
 
           const originalButtonText = {
             ru: 'Заказать со скидкой',
@@ -1197,26 +1204,62 @@
             uz: 'Buyurtma qabul qilindi!',
             en: 'Order accepted!',
           };
-
-          const currentLang = html.lang;
+          const errorText = {
+            ru: 'Ошибка! Попробуйте еще раз.',
+            uz: "Xatolik! Qayta urinib ko'ring.",
+            en: 'Error! Please try again.',
+          };
 
           button.disabled = true;
-          button.style.backgroundColor = '#10b981'; // Green-500 for success
           button.querySelector(`.lang-${currentLang}`).textContent =
             sendingText[currentLang];
 
-          setTimeout(() => {
-            form.reset();
-            button.querySelector(`.lang-${currentLang}`).textContent =
-              successText[currentLang];
+          // Собираем данные формы
+          const formData = new FormData(form);
+          const data = {
+            name: formData.get('name'),
+            phone: formData.get('phone'),
+            productName: 'Сила Макс',
+          };
 
-            setTimeout(() => {
+          try {
+            // Отправляем данные на сервер
+            const response = await fetch(
+              'https://supermemory-theta.vercel.app/api/send-message',
+              {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(data),
+              }
+            );
+
+            if (response.ok) {
+              // Успешная отправка
+              form.reset();
+              button.classList.add('bg-green-500');
+              button.classList.remove('bg-yellow-400');
               button.querySelector(`.lang-${currentLang}`).textContent =
-                originalButtonText[currentLang];
-              button.disabled = false;
-              button.style.backgroundColor = 'var(--secondary-color)'; // Revert to original color
-            }, 3000);
-          }, 1500);
+                successText[currentLang];
+            } else {
+              throw new Error('Ошибка сервера');
+            }
+          } catch (error) {
+            console.error('Error:', error);
+            button.classList.add('bg-red-500');
+            button.classList.remove('bg-yellow-400');
+            button.querySelector(`.lang-${currentLang}`).textContent =
+              errorText[currentLang];
+          }
+
+          setTimeout(() => {
+            button.querySelector(`.lang-${currentLang}`).textContent =
+              originalButtonText[currentLang];
+            button.disabled = false;
+            button.classList.remove('bg-green-500', 'bg-red-500');
+            button.classList.add('bg-yellow-400');
+          }, 3000);
         }
 
         document.querySelectorAll('.orderForm').forEach((form) => {
