--- a/stop-artroz.html
+++ b/stop-artroz.html
@@ -911,9 +911,13 @@
     </section>
   </main>
 
-  <footer class="bg-black text-white py-6">
+  <footer class="bg-gray-800 text-white py-6">
     <div class="container mx-auto px-6 text-center text-sm">
-      <p class="mb-2">OOO "SHIFO NUR" | Производитель</p>
+      <p class="mb-2">
+        <span class="lang-ru">OOO "Delta Online" | Розничный торговец</span>
+        <span class="lang-uz">Delta Online MChJ | Chakana sotuvchi</span>
+        <span class="lang-en">Delta Online LLC | Reseller</span>
+      </p>
       <p class="text-xs text-gray-400">
         <span class="lang-ru">Биологически активная добавка. Не является лекарственным
           средством.</span>
@@ -922,6 +926,7 @@
       </p>
     </div>
   </footer>
+
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
